--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pkg": "^5.8.1"
+    "pkg": "^5.8.1",
+    "stripe": "^13.7.0"
   },
   "author": "",
   "license": "ISC"
