--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "antd": "^5.9.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
@@ -20,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
